--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,8 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [main]
+    paths:
+      - "web/**"
   workflow_dispatch:
 
 permissions:
@@ -28,14 +30,17 @@ jobs:
 
       - name: Install dependencies 🔧
         run: |
-          npm init -y
-          npm install react react-dom react-scripts framer-motion tailwindcss gh-pages @tailwindcss/forms
-          npm install --save-dev
-          npm install -D react-scripts
+          npm ci || npm install
+
+      - name: Setup Tailwind CSS
+        run: |
+          if [ ! -f "tailwind.config.js" ]; then
+            npx tailwindcss init -p
+          fi
 
       - name: Build 🏗️
         run: |
-          DISABLE_ESLINT_PLUGIN=true npm run build
+          npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
