--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,7 @@
     "name": "captiocr-web",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://CarloSacchi.github.io/CaptiOCRweb",
+    "homepage": "https://www.captiocr.com",
     "dependencies": {
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
